Integer 部分demo